--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,7 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
 
-        // Aliases
+        /* Alises */
         "types": ["node"],
         "paths": {
             "@/*": ["./src/*"]
