--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@pbe/react-yandex-maps": "^1.2.5",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
+        "redux": "^5.0.1",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^3.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
         "@types/node": "^22.5.5",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/react-redux": "^7.1.33",
         "@vitejs/plugin-react": "^4.3.1",
         "eslint": "^9.9.0",
         "eslint-plugin-prettier": "^5.2.1",
