feat: updated map from @pbe to actual yandex api map

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,9 +20,10 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
 
-        /* Alises */
-        "types": ["node"],
+        /* Aliases and Ymap */
+        "typeRoots": ["./node_modules/@types", "./node_modules/@yandex/ymaps3-types"],
         "paths": {
+            "ymaps3": ["./node_modules/@yandex/ymaps3-types"],
             "@/*": ["./src/*"]
         }
     },
