--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "prepare": "husky"
     },
     "dependencies": {
-        "@pbe/react-yandex-maps": "^1.2.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
@@ -26,6 +25,7 @@
         "@types/react-dom": "^18.3.0",
         "@types/react-redux": "^7.1.33",
         "@vitejs/plugin-react": "^4.3.1",
+        "@yandex/ymaps3-types": "^0.0.28",
         "eslint": "^9.9.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
