--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "lint-staged": "^15.2.10",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.1",
-        "vite": "^5.4.1"
+        "vite": "^5.4.1",
+        "ymap3-components": "^1.1.6"
     },
     "husky": {
         "hooks": {
