--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/react-redux": "^7.1.33",
+        "@types/styled-components": "^5.1.34",
         "@vitejs/plugin-react": "^4.3.1",
         "@yandex/ymaps3-types": "^0.0.28",
         "eslint": "^9.9.0",
@@ -34,6 +35,7 @@
         "globals": "^15.9.0",
         "husky": "^9.1.6",
         "lint-staged": "^15.2.10",
+        "styled-components": "^6.1.13",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.1",
         "vite": "^5.4.1",
