--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "globals": "^15.9.0",
         "husky": "^9.1.6",
         "lint-staged": "^15.2.10",
+        "react-svg": "^16.1.34",
         "styled-components": "^6.1.13",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.1",
