--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.7",
+        "axios": "^1.7.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
@@ -39,7 +40,7 @@
         "react-svg": "^16.1.34",
         "styled-components": "^6.1.13",
         "typescript": "^5.5.3",
-        "typescript-eslint": "^8.0.1",
+        "typescript-eslint": "^8.16.0",
         "vite": "^5.4.1",
         "ymap3-components": "^1.1.6"
     },
