--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "react-router-dom": "^7.0.1",
         "redux": "^5.0.1",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^3.1.0"
+        "redux-thunk": "^3.1.0",
+        "socket.io-client": "^4.8.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
