--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@apollo/client": "^3.12.3",
         "@reduxjs/toolkit": "^2.2.7",
         "axios": "^1.7.8",
+        "graphql": "^16.9.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
